ref menu controller

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -374,8 +374,7 @@
 			<div class="container">
 				<h2>Есть вопросы?</h2>
 				<p>Получите ответы на вопросы о продуктах, продажах, поддержке и многом другом.</p>
-				<p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru"
-						class="link link_green">pochta@mail.ru</a> или воспользоваться формой
+				<p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
 					на сайте</p>
 			</div>
 			<form class="questions__form form">
