--- a/src/html/pages/contacts.html
+++ b/src/html/pages/contacts.html
@@ -54,8 +54,8 @@
             блок А, 2 этаж, офис 201
           </span>
           <div>
-            <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
-            <span>Факс: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+            <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
+            <span>Факс: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
             <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
           </div>
         </div>
@@ -65,8 +65,8 @@
             <b>▾</b>
           </div>
           <div class="dropdown__options">
-            <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
-            <span>Факс: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+            <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
+            <span>Факс: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
             <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
           </div>
         </div>
@@ -82,7 +82,7 @@
                 Уфа, ул. Пушкина, д. 33/2,
                 блок А, 2 этаж, офис 201
               </span>
-              <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 Уфа, ул. Пушкина, д. 33/2,
                 блок А, 2 этаж, офис 201
               </span>
-              <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="Диалог+73472921470" class="link">+7 (347) 292-14-70</a></span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
@@ -128,8 +128,7 @@
         <h2>Свяжитесь
           с экспертом</h2>
         <p>Получите ответы на вопросы о продуктах, продажах, поддержке и многом другом.</p>
-        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru"
-            class="link link_green">pochta@mail.ru</a> или воспользоваться формой
+        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
           на сайте</p>
       </div>
       <form class="questions__form form">
