--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -11,10 +11,10 @@
 					<span>ваш технологический партнер</span>
 					<span>
 						для внедрения <b>масштабных</b></span>
-					<div>
+					<article>
 						<span>it-решений</span>
 						@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary',children:'подробнее'})
-					</div>
+					</article>
 				</h1>
 			</div>
 		</section>
