--- a/src/html/pages/partner-detail.html
+++ b/src/html/pages/partner-detail.html
@@ -37,7 +37,6 @@
           <img src="@images/cert.png" alt="certificate">
         </div>
       </div>
-      </div>
     </section>
     <section class="questions">
       <img src="@images/questions-bg.png" alt="photo">
@@ -45,8 +44,7 @@
         <h2>Свяжитесь<br>
           с экспертом</h2>
         <p>Получите ответы на вопросы о продуктах, продажах, поддержке и многом другом.</p>
-        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru"
-            class="link link_green">pochta@mail.ru</a> или воспользоваться формой
+        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
           на сайте</p>
       </div>
       <form class="questions__form form">
