--- a/src/html/pages/media-detail.html
+++ b/src/html/pages/media-detail.html
@@ -172,13 +172,12 @@
       </div>
     </section>
     <section class="questions">
-      <img src="@images/notebook.png">
+      <img src="@images/notebook.png" alt="photo">
       <div class="container">
         <h2>Подписаться
           на рассылку</h2>
         <p>Получите ответы на вопросы о продуктах, продажах, поддержке и многом другом.</p>
-        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru"
-            class="link link_green">pochta@mail.ru</a> или воспользоваться формой
+        <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
           на сайте</p>
       </div>
       <form class="questions__form form form_secondary">
