--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -149,7 +149,7 @@
       </div>
       <div class="solutions-section__content">
         <div class="solutions-section__video">
-          <video autoplay muted loop src="@videos/sample-5s.mp4" alt="video"></video>
+          <video autoplay muted loop src="@videos/sample-5s.mp4"></video>
         </div>
         <div class="solutions-section__list">
           <div class="solution-card">
