--- a/src/html/pages/media-detail.html
+++ b/src/html/pages/media-detail.html
@@ -99,21 +99,7 @@
     <section class="media-section">
       <div class="container">
         <h2>больше новостей</h2>
-        <ul class="tabs">
-          <li class="media-section__tab link tab active">
-            <a href="#tab-1">Все</a>
-          </li>
-          <li class="media-section__tab link tab">
-            <a href="#tab-2"> Новости компании</a>
-          </li>
-          <li class="media-section__tab link tab">
-            <a href="#tab-3"> СМИ</a>
-          </li>
-          <li class="media-section__tab link tab">
-            <a href="#tab-4"> Мероприятия</a>
-          </li>
-        </ul>
-        <div class="media-component tab-content active" id="tab-1">
+        <div class="media-component">
           <img src="@images/photographer.png" alt="photo">
           <div class="media-component__list">
             <div class="news-card">
@@ -129,33 +115,6 @@
               <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
                 Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
                 учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
-            </div>
-            <div class="news-card">
-              <div class="news-card__date">1 сентября</div>
-              <h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
-              <p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
-                учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
-            </div>
-          </div>
-        </div>
-        <div class="media-component tab-content" id="tab-2">
-          <img src="@images/building.png" alt="photo">
-          <div class="media-component__list">
-            <div class="news-card">
-              <div class="news-card__date">24 августа</div>
-              <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
-              <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
-                Кушнаренково. 10-х классов МБОУ СОШ 1 села
-                Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
-                учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
-            </div>
-            <div class="news-card">
-              <div class="news-card__date">25 августа</div>
-              <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
-              <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики </p>
               <a class="link link_green-arrow" href="#">подробнее</a>
             </div>
             <div class="news-card">
