--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -153,13 +153,16 @@
         </div>
         <div class="solutions-section__list">
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Интеллектуальная транспортная система «Курсор»</h3>
             <p>Создать системы безопасности для котельных</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image"></div>
+            <img src="@images/solution-bg.png" alt="photo">
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -167,13 +170,15 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image"></div>
+            <img src="@images/solution-bg.png" alt="photo">
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image"></div>
+            <img src="@images/solution-bg.png" alt="photo">
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
