--- a/src/html/pages/solutions.html
+++ b/src/html/pages/solutions.html
@@ -54,7 +54,9 @@
       <div class="container">
         <div class="solutions__cards">
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/password.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/password.png" alt="photo">
+            </div>
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое
@@ -64,7 +66,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/roads.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/roads.png" alt="photo">
+            </div>
             <h3>Интеллектуальная транспортная система «Курсор»</h3>
             <p>Программное обеспечение «Интеллектуальная транспортная система «Курсор» обеспечивает возможности контроля
               состояния оборудования для балансодержателей и компаний, принявших на обслуживание/содержание комплексы
@@ -72,7 +76,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/server.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/server.png" alt="photo">
+            </div>
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой
@@ -80,7 +86,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/monitors.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/monitors.png" alt="photo">
+            </div>
             <h3>Системы технической безопасности</h3>
             <p>Системы технической безопасности являются сегодня одним из самых востребованных и постоянно
               совершенствующихся продуктов на рынке. Компания "Форт Диалог" предлагает услуги по созданию комплексных
@@ -88,28 +96,37 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/laptop.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/laptop.png" alt="photo">
+            </div>
             <h3>Коммуникационные системы</h3>
             <p>Компания "Форт Диалог" осуществляет комплексный подход в решении задач по построению IT-инфраструктуры и
               организации систем связи</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/protocol.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/protocol.png" alt="photo">
+            </div>
             <h3>Программно-аппаратный комплекс «Протокол»</h3>
             <p>ПАК «ПРОТОКОЛ» представляет собой комплексную систему объединяющую различные системы безопасности,
               разработанную согласно методологии PSIM</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/alien.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/alien.png" alt="photo">
+            </div>
             <h3>мониторинг физиологических параметров операторов</h3>
             <p>Система мониторинга физиологических параметров операторов представляет собой программно-аппаратный
               комплекс, осуществляющий непрерывный мониторинг и анализ психофизического состояния операторов</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card solution-card_secondary">
-            <img class="solution-card__image" src="@images/cameraman.png" alt="photo">
+            <div class="solution-card__image">
+              <img class="solution-card__image" src="@images/cameraman.png" alt="photo">
+
+            </div>
             <h3>Система вибромониторинга насосного оборудования</h3>
             <p>Система предназначена для непрерывного мониторинга вибросостояний насосов в различных отраслях
               промышленности, таких как транспортировка нефти и нефтепереработка</p>
